FUSION #comment Fixed animation issue on mobile

--- a/src/app/core-layout/main-navigation/navigation-mobile/navigation-mobile.component.scss
+++ b/src/app/core-layout/main-navigation/navigation-mobile/navigation-mobile.component.scss
@@ -2,7 +2,7 @@
 
 $navigation-link-mobile-padding: $space-medium;
 // Main Mobile wrapper
-$navigation-mobile-top-offset: -45px;
+$navigation-mobile-top-offset: -50px;
 $navigation-mobile-bg-color: $color-black;
 // Items variables
 $navigation-mobile-item-active-bg-color: $color-white;
